fixed item-date not displaying due to item-label overflow set to hidden previously for item-label ellipses by making item-date not a child of item-label but of item and repositioning

--- a/src/style.css
+++ b/src/style.css
@@ -239,11 +239,12 @@ body {
 
 .list-item-date {
     position: absolute;
-    top: 20px;
+    top: 38px;
+    left: 35px;
 
     font-size: 12px;
 
-    white-space: nowrap;
+    white-space: nowrap;    
 }
 
 .add-list-item {
